--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,26 +1,29 @@
 {
   "env": {
-      "es2021": true,
-      "node": true
+    "es2021": true,
+    "node": true
   },
   "extends": [
-      "airbnb-base",
-      "prettier/@typescript-eslint",
-      "plugin:prettier/recommended",
-      "plugin:@typescript-eslint/recommended"
+    "airbnb-base",
+    "prettier/@typescript-eslint",
+    "plugin:prettier/recommended",
+    "plugin:@typescript-eslint/recommended"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-      "ecmaVersion": 12,
-      "sourceType": "module"
+    "ecmaVersion": 12,
+    "sourceType": "module"
   },
-  "plugins": [
-      "@typescript-eslint",
-      "prettier"
-  ],
+  "plugins": ["@typescript-eslint", "prettier"],
   "rules": {
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      {
+        "argsIgnorePattern": "_"
+      }
+    ],
     "prettier/prettier": "error",
-    "import/extensions":[
+    "import/extensions": [
       "error",
       "ignorePackages",
       {
